New job multipliers in config

--- a/game.config.properties
+++ b/game.config.properties
@@ -34,7 +34,9 @@ system.server.game.rate.honor 1
 system.server.game.rate.kamas 1
 system.server.game.rate.job 1
 system.server.game.rate.fm 1
-system.server.game.start.message 
+system.server.game.gather.baseDuration 12000
+system.server.game.gather.quantityMultiplier 1
+system.server.game.start.message
 system.server.game.start.level 1
 system.server.game.start.kamas 0
 system.server.game.start.map -1
@@ -51,6 +53,6 @@ system.server.game.timeByTurn 30
 system.server.game.mode.christmas false
 system.server.game.mode.halloween false
 system.server.game.mode.heroic false
-system.server.game.mode.tileman true
+system.server.game.mode.tileman false
 system.server.game.mode.event false
 system.server.game.timeBetweenEvent 60
