.autounlock toggle instead of on/off

--- a/game.config.properties
+++ b/game.config.properties
@@ -5,7 +5,7 @@ system.server.exchange.ip 127.0.0.1
 system.server.exchange.port 666
 system.server.exchange.key ChangeMeYn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
 system.server.encyption false
-system.server.debug true
+system.server.debug false
 system.server.logs true
 
 #Login database
@@ -53,6 +53,6 @@ system.server.game.timeByTurn 30
 system.server.game.mode.christmas false
 system.server.game.mode.halloween false
 system.server.game.mode.heroic false
-system.server.game.mode.tileman false
+system.server.game.mode.tileman true
 system.server.game.mode.event false
 system.server.game.timeBetweenEvent 60
