--- a/game.config.properties
+++ b/game.config.properties
@@ -5,7 +5,7 @@ system.server.exchange.ip 127.0.0.1
 system.server.exchange.port 666
 system.server.exchange.key ChangeMeYn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
 system.server.encyption false
-system.server.debug false
+system.server.debug true
 system.server.logs true
 
 #Login database
@@ -32,10 +32,10 @@ system.server.game.rate.drop 1
 system.server.game.rate.dropThreshold 1
 system.server.game.rate.honor 1
 system.server.game.rate.kamas 1
-system.server.game.rate.job 1
+system.server.game.rate.job 5
 system.server.game.rate.fm 1
-system.server.game.gather.baseDuration 12000
-system.server.game.gather.quantityMultiplier 1
+system.server.game.gather.baseDuration 3000
+system.server.game.gather.quantityMultiplier 2
 system.server.game.start.message
 system.server.game.start.level 1
 system.server.game.start.kamas 0
@@ -53,6 +53,6 @@ system.server.game.timeByTurn 30
 system.server.game.mode.christmas false
 system.server.game.mode.halloween false
 system.server.game.mode.heroic false
-system.server.game.mode.tileman true
+system.server.game.mode.tileman false
 system.server.game.mode.event false
 system.server.game.timeBetweenEvent 60
