--- a/game.config.properties
+++ b/game.config.properties
@@ -29,6 +29,7 @@ system.server.game.key eratz
 system.server.game.version 1.39.9e
 system.server.game.rate.xp 4
 system.server.game.rate.drop 1
+system.server.game.rate.dropRolls 2
 system.server.game.rate.dropThreshold 1
 system.server.game.rate.honor 1
 system.server.game.rate.kamas 1
