Tileman update : Moving default unlocked maps to a database, adding command to add

--- a/game.config.properties
+++ b/game.config.properties
@@ -54,6 +54,6 @@ system.server.game.timeByTurn 30
 system.server.game.mode.christmas false
 system.server.game.mode.halloween false
 system.server.game.mode.heroic false
-system.server.game.mode.tileman false
+system.server.game.mode.tileman true
 system.server.game.mode.event false
 system.server.game.timeBetweenEvent 60
